kube-objects/kuma/kuma-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      containers:
      - name: uptime-kuma
        # On utilise l'image officielle d'Uptime Kuma
        image: louislam/uptime-kuma:1
        ports:
        - containerPort: 3001
        # On branche le disque dur au dossier interne de l'application
        volumeMounts:
        - name: kuma-storage
          mountPath: /app/data
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      volumes:
      - name: kuma-storage
        persistentVolumeClaim:
          claimName: uptime-kuma-pvc
