kube-objects/kuma/kuma-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma-ingress
  namespace: default
  annotations:
    # On dit à Nginx d'envoyer la vérification à l'Outpost d'Authentik
    nginx.ingress.kubernetes.io/auth-url: "http://ak-outpost-authentik-embedded.authentik.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx"
    # En cas d'erreur (non connecté), on redirige vers le portail de login
    nginx.ingress.kubernetes.io/auth-signin: "https://authentik.tondomaine.com/outpost.goauthentik.io/start?rd=$escaped_request_uri"  
    # On récupère les headers (nom d'utilisateur, groupes) pour que l'app sache qui est là
    nginx.ingress.kubernetes.io/auth-response-headers: "Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email"
spec:
  ingressClassName: nginx
  rules:
  - host: kuma.lab
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: uptime-kuma-service
            port: 
              number: 80
